--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,53 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  p {
+    @apply text-lg my-2;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-heading my-6 font-bold;
+  }
+  h1 {
+    @apply text-4xl;
+  }
+  h2 {
+    @apply text-3xl;
+  }
+  h3 {
+    @apply text-2xl;
+  }
+  h4 {
+    @apply text-xl;
+  }
+  h5 {
+    @apply text-lg;
+  }
+
+  ul, ol {
+    @apply my-4;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  ol{
+    list-style-type: decimal;
+  }
+
+  li{
+    @apply my-2;
+  }
+}
+
+@layer components {
+  .btn {
+    @apply disabled:bg-green-200 disabled:cursor-not-allowed bg-green-600 tracking-widest w-full text-white text-2xl text-center font-extrabold cursor-pointer uppercase py-3 rounded-md hover:bg-green-500 transition-all block;
+  }
+  .title-strip {
+    @apply text-lg font-bold mt-8 p-2 bg-slate-200 rounded-md
+  }
+}
